2008-04-18: Improved backwards compatibility to older versions of SQLite.

2008-04-04: Fixed a build problem on Mac OS X.

2008-03-27: Fixed a build problem on FreeBSD.

            Thanks to Jaap Boender <Jaap.Boender@pps.jussieu.fr> for
            the patch!

2008-03-14: Synced with Jane Street tree.

2008-03-05: Added a patch to improve Windows support.  Thanks to Alain
            Frisch <alain@frisch.fr> for the patch!

2007-09-04: Fixed a minor bug converting status codes.

2007-08-20: Fixed a GC-bug related to user-defined SQL-functions.

            Thanks to Enrico Tassi <gareuselesinge@virgilio.it> for the
            test case to replicate this problem!

2007-06-17: Added support for user-defined scalar functions.  Thanks to
            Enrico Tassi <gareuselesinge@virgilio.it> for the patch!

            Switched to sqlite3_prepare_v2 internally to avoid the older,
            deprecated sqlite3_prepare-function.  Thanks to Gabriel
            Kerneis <gabriel@kerneis.info> for the hint!

            Removed exec_sql-function, which was buggy in the last
            release anyway (thanks to Paul Stodghill <ps27@cornell.edu>
            for pointing this out!).  Its interface hides too much
            important information from the user (e.g. BUSY-steps, etc.).
            It did not seem possible to design a function that made
            it as simple as exec_sql to run an SQL-statement without
            inviting the user to write buggy/incomplete code, or that
            wouldn't make the interface almost as complicated as just
            writing the correct code that handles all cases by oneself.

2007-05-07: Further GC-bug fixes.  There was a design bug in the library
            that was causing all these GC issues (C-structs allocated
            in the OCaml-heap).  This obviously seemed safe (and more
            efficient) to the initial author, but after extensive checking