@@ -1,3 +1,7 @@
+2008-05-07: Added Data.to_string_value for converting fields to strings
+            without prefixing their type.  Thanks to Stefano Zacchiroli
+            <zack@debian.org> for the suggestion.
+
 2008-04-18: Improved backwards compatibility to older versions of SQLite.
 
 2008-04-04: Fixed a build problem on Mac OS X.
